<resources>
    <string name="app_name">GameProject</string>
    <string name="footer_text">Developed by SD2M</string>
    <string name="login_text">Login</string>
    <string name="welcome_text">Welcome!</string>
    <string name="information_text">With our application, it\'ll be much easier and more fun to keep track of your games!</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="remember_text">Remember me</string>
    <string name="create_account">Create an Account</string>
    <string name="new_account">New Account</string>
    <string name="pick_photo">Let\'s pick a photo?</string>
    <string name="authentication_data">Authentication Data</string>
    <string name="personal_data">Personal Data</string>
    <string name="name_text">What\'s your name?</string>
    <string name="city_text">What\'s your city?</string>
    <string name="birth_text">Birth Date</string>
    <string name="gamer_level">What\'s your gamer level?</string>
    <string name="level">Casual</string>
    <string name="favorite_console">What\'s your favorite console?</string>
    <string-array name="console_options">
        <item>Playstation 4</item>
        <item>Xbox One</item>
        <item>Playstation 5</item>
        <item>Xbox Series X</item>
        <item>Nintendo Switch</item>
    </string-array>
    <string name="gender">What\'s your gender?</string>
    <string name="masculine">Masculine</string>
    <string name="feminine">Feminine</string>
    <string name="games_finished">Games Finished</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="age_text">Age</string>
    <string name="registered_games">Your registered games</string>
</resources>